[package]
name = "fibers_bzip2"
version = "0.1"
authors = ["Juri Sacchetta <jurisacchetta@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[profile.release-fuzzbench]
inherits = "release"
debug = false
strip = true

[dependencies]
libafl = { path = "../../libafl/" }
libafl_bolts = { path = "../../libafl_bolts/" }
libafl_qemu = { path = "../../libafl_qemu/", features = ["x86_64", "usermode", "qemu_fibers"] }

clap = { version = "4.4.18", features = ["default"] }
nix = "0.26"

