[package]
name = "interleaving_fuzz"
authors = ["Juri Sacchetta"]
edition = "2021"
version = "0.1.0"


[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true


[dependencies]
clap = "4.5.3"
libafl = { path = "../../libafl/" }
libafl_bolts = { path = "../../libafl_bolts/" }
libafl_qemu = { path = "../../libafl_qemu/", features = ["x86_64", "usermode", "qemu_fibers"] }
