[package]
name = "new_inter"
edition = "2021"
version = "0.1.0"

[dependencies]
libafl = { path = "../../../libafl" }
libafl_bolts = { path = "../../../libafl_bolts" }
libafl_qemu = { path = "../../../libafl_qemu", features = [
  "x86_64",
  "usermode",
  "qemu_fibers",
] }
libafl_targets = { path = "../../../libafl_targets", version = "0.13.2" }

log = { version = "0.4.22", features = ["release_max_level_info"] }
clap = { version = "4.5.18", features = ["default"] }
nix = { version = "0.29.0", features = ["fs"] }
